--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "sweetalert": "^2.1.2",
         "vue-loader": "^15.9.7",
         "vue-template-compiler": "^2.6.14"
+
     },
     "dependencies": {
         "bootstrap-vue": "^2.21.2",
         "vue": "^2.6.12",
         "vue-axios": "^3.4.1",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "vue2-animate": "^2.1.4"
     }
 }
